Replace StackUtils#copyWithSize with forge api, cleanup streams