@@ -1,7 +1,6 @@
 package mods.gregtechmod.compat.jei;
 
 import ic2.core.gui.Gauge;
-import ic2.core.util.StackUtil;
 import mezz.jei.api.IGuiHelper;
 import mezz.jei.api.gui.IDrawable;
 import mezz.jei.api.gui.IDrawableAnimated;
@@ -13,9 +12,10 @@ import mods.gregtechmod.util.GtLocale;
 import mods.gregtechmod.util.JavaUtil;
 import net.minecraft.client.Minecraft;
 import net.minecraft.item.ItemStack;
+import net.minecraftforge.items.ItemHandlerHelper;
+import one.util.streamex.StreamEx;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JEIUtils {
     
@@ -25,20 +25,21 @@ public class JEIUtils {
     public static void drawInfo(Minecraft minecraft, IMachineRecipe<?, ?> recipe, int yOffset, boolean showEnergyCost) {
         int duration = recipe.getDuration();
         double energyCost = recipe.getEnergyCost();
+        
         minecraft.fontRenderer.drawString(GtLocale.translate("jei.energy", JavaUtil.formatNumber(duration * energyCost)), 2, yOffset + 60, GuiColors.BLACK, false);
         minecraft.fontRenderer.drawString(GtLocale.translate("jei.time", JavaUtil.formatNumber(duration / 20)), 2,yOffset + 70, GuiColors.BLACK, false);
         if (showEnergyCost) minecraft.fontRenderer.drawString(GtLocale.translate("jei.max_energy", JavaUtil.formatNumber(energyCost)), 2,yOffset + 80, GuiColors.BLACK, false);
     }
     
     public static List<List<ItemStack>> getMultiInputs(IMachineRecipe<List<IRecipeIngredient>, ?> recipe) {
-        return recipe.getInput().stream()
+        return StreamEx.of(recipe.getInput())
                 .map(input -> {
                     int count = input.getCount();
-                    return input.getMatchingInputs().stream()
-                            .map(stack -> StackUtil.copyWithSize(stack, count))
-                            .collect(Collectors.toList());
+                    return StreamEx.of(input.getMatchingInputs())
+                            .map(stack -> ItemHandlerHelper.copyStackWithSize(stack, count))
+                            .toList();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
     
     public static IDrawable gaugeToDrawable(IGuiHelper guiHelper, Gauge.IGaugeStyle gauge) {
@@ -53,7 +54,6 @@ public class JEIUtils {
         if (vertical) {
             return reverse ? IDrawableAnimated.StartDirection.BOTTOM : IDrawableAnimated.StartDirection.TOP;
         }
-        
         return reverse ? IDrawableAnimated.StartDirection.RIGHT : IDrawableAnimated.StartDirection.LEFT;
     }
 }
