@@ -1,6 +1,5 @@
 package mods.gregtechmod.util;
 
-import com.google.common.base.Predicate;
 import ic2.api.upgrade.IUpgradeItem;
 import ic2.core.block.invslot.InvSlot;
 import ic2.core.item.upgrade.ItemUpgradeModule;
@@ -48,6 +47,7 @@ import net.minecraftforge.items.IItemHandler;
 import net.minecraftforge.items.ItemHandlerHelper;
 import net.minecraftforge.oredict.OreDictionary;
 import one.util.streamex.StreamEx;
+import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.tuple.Pair;
 
 import javax.annotation.Nullable;
@@ -58,17 +58,17 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public final class GtUtil {
     public static final ResourceLocation COMMON_TEXTURE = new ResourceLocation(Reference.MODID, "textures/gui/common.png");
     public static final IFluidHandler VOID_TANK = new VoidTank();
-    @SuppressWarnings("Guava")
     public static final Predicate<Fluid> STEAM_PREDICATE = fluid -> fluid == FluidRegistry.getFluid("steam") || fluid == FluidName.steam.getInstance() || fluid == FluidName.superheated_steam.getInstance();
     public static final InvSlot.InvSide INV_SIDE_VERTICAL = addInvside("VERTICAL", EnumFacing.UP, EnumFacing.DOWN);
     public static final InvSlot.InvSide INV_SIDE_NS = addInvside("NS", EnumFacing.NORTH, EnumFacing.SOUTH);
-    
+
     private static final LazyValue<Path> MOD_FILE = new LazyValue<>(() -> {
         Path source = Loader.instance().activeModContainer().getSource().toPath();
         if (source.toString().endsWith(".jar")) {
@@ -79,18 +79,19 @@ public final class GtUtil {
                 throw new RuntimeException("Could not create ModFile filesystem", e);
             }
         }
-        
+
         return source;
     });
-    
-    private GtUtil() {}
-    
+
+    private GtUtil() {
+    }
+
     public static Path getAssetPath(String name) {
         String path = "assets/" + Reference.MODID + "/" + name;
-        
+
         return MOD_FILE.get().resolve(path);
     }
-    
+
     public static BufferedReader readAsset(String path) {
         try {
             return Files.newBufferedReader(getAssetPath(path));
@@ -98,21 +99,21 @@ public final class GtUtil {
             throw new RuntimeException("Asset " + path + " not found", e);
         }
     }
-    
+
     public static InvSlot.InvSide addInvside(String name, EnumFacing... sides) {
-        return EnumHelper.addEnum(InvSlot.InvSide.class, name, new Class[] { EnumFacing[].class }, (Object) sides);
+        return EnumHelper.addEnum(InvSlot.InvSide.class, name, new Class[]{EnumFacing[].class}, (Object) sides);
     }
-    
+
     public static List<ItemStack> copyStackList(List<ItemStack> list) {
-        return list.stream()
-                .map(ItemStack::copy)
-                .collect(Collectors.toList());
+        return StreamEx.of(list)
+            .map(ItemStack::copy)
+            .toList();
     }
-    
+
     public static List<ItemStack> nonEmptyList(ItemStack... elements) {
         return StreamEx.of(elements)
-                .remove(ItemStack::isEmpty)
-                .toList();
+            .remove(ItemStack::isEmpty)
+            .toList();
     }
 
     public static boolean damageStack(EntityPlayer player, ItemStack stack, int damage) {
@@ -146,34 +147,34 @@ public final class GtUtil {
 
     public static List<ItemStack> correctStacksize(List<ItemStack> list) {
         return list.stream()
-                .flatMap(stack -> {
-                    int maxSize = stack.getMaxStackSize();
-                    if (stack.getCount() > maxSize) {
-                        int cycles = stack.getCount() / maxSize + 1;
-                        ItemStack split = stack.splitStack(maxSize);
-                        return Stream.generate(() -> split)
-                                .limit(cycles - 1);
-                    }
-                    return Stream.of(stack);
-                })
-                .collect(Collectors.toList());
+            .flatMap(stack -> {
+                int maxSize = stack.getMaxStackSize();
+                if (stack.getCount() > maxSize) {
+                    int cycles = stack.getCount() / maxSize + 1;
+                    ItemStack split = stack.splitStack(maxSize);
+                    return Stream.generate(() -> split)
+                        .limit(cycles - 1);
+                }
+                return Stream.of(stack);
+            })
+            .collect(Collectors.toList());
     }
 
     public static boolean stackEquals(ItemStack first, ItemStack second) {
         return stackEquals(first, second, true);
     }
-    
+
     public static boolean stackEquals(ItemStack first, ItemStack second, boolean matchNbt) {
         if (first.isEmpty() || second.isEmpty()) return false;
 
         return first.getItem() == second.getItem()
-                && (first.getMetadata() == OreDictionary.WILDCARD_VALUE || first.getMetadata() == second.getMetadata())
-                && (!matchNbt || StackUtil.checkNbtEquality(first.getTagCompound(), second.getTagCompound()));
+            && (first.getMetadata() == OreDictionary.WILDCARD_VALUE || first.getMetadata() == second.getMetadata())
+            && (!matchNbt || StackUtil.checkNbtEquality(first.getTagCompound(), second.getTagCompound()));
     }
-    
+
     public static boolean stackItemEquals(ItemStack first, ItemStack second) {
         if (first.isEmpty() || second.isEmpty()) return false;
-        
+
         return first.getItem() == second.getItem() && (first.isItemStackDamageable() || first.getItemDamage() == second.getItemDamage());
     }
 
@@ -183,14 +184,19 @@ public final class GtUtil {
         return stack;
     }
     
-    // TODO Test
+    public static ItemStack copyWithMetaSize(ItemStack stack, int count, int meta) {
+        ItemStack ret = ItemHandlerHelper.copyStackWithSize(stack, count);
+        ret.setItemDamage(meta);
+        return stack;
+    }
+
     public static ItemStack getEmptyFluidContainer(ItemStack stack) {
         IFluidHandlerItem handler = FluidUtil.getFluidHandler(stack.copy());
         if (handler != null) {
             handler.drain(Integer.MAX_VALUE, true);
             return handler.getContainer();
         }
-        
+
         return ItemStack.EMPTY;
     }
 
@@ -215,59 +221,59 @@ public final class GtUtil {
             ItemUpgradeModule.UpgradeType upgradeType = ItemUpgradeModule.UpgradeType.values()[stack.getMetadata()];
             String name = upgradeType.name();
             return Arrays.stream(IC2UpgradeType.values())
-                    .filter(type -> type.itemType.equals(name))
-                    .findFirst()
-                    .orElse(null);
+                .filter(type -> type.itemType.equals(name))
+                .findFirst()
+                .orElse(null);
         }
         return null;
     }
-    
+
     public static void consumeMultiInput(List<IRecipeIngredient> input, GtSlotProcessableItemStack<?, ?>... slots) {
         Arrays.stream(slots)
-                .forEach(slot -> input.forEach(ingredient -> {
-                    if (ingredient.apply(slot.get())) slot.consume(ingredient.getCount(), true);
-                }));
+            .forEach(slot -> input.forEach(ingredient -> {
+                if (ingredient.apply(slot.get())) slot.consume(ingredient.getCount(), true);
+            }));
     }
 
     public static boolean isWrench(ItemStack stack) {
         return containsStack(stack, GregTechAPI.instance().getWrenches());
     }
-    
+
     public static boolean isScrewdriver(ItemStack stack) {
         return containsStack(stack, GregTechAPI.instance().getScrewdrivers());
     }
-    
+
     public static boolean isSoftHammer(ItemStack stack) {
         return containsStack(stack, GregTechAPI.instance().getSoftHammers());
     }
-    
+
     public static boolean isHardHammer(ItemStack stack) {
         return containsStack(stack, GregTechAPI.instance().getHardHammers());
     }
-    
+
     public static boolean isCrowbar(ItemStack stack) {
         return containsStack(stack, GregTechAPI.instance().getCrowbars());
     }
-    
+
     public static boolean containsStack(ItemStack stack, Collection<ItemStack> stacks) {
         return stacks.stream()
-                .anyMatch(s -> stackEquals(s, stack, false));
+            .anyMatch(s -> stackEquals(s, stack, false));
     }
-    
+
     public static boolean isAir(World world, BlockPos pos) {
         IBlockState state = world.getBlockState(pos);
         return state.getBlock().isAir(state, world, pos);
     }
-    
+
     public static boolean findBlock(IBlockAccess world, BlockPos pos, Block... blocks) {
         Block block = world.getBlockState(pos).getBlock();
         return Arrays.asList(blocks).contains(block);
     }
-    
+
     public static boolean findTileEntity(IBlockAccess world, BlockPos pos, Class<?>... classes) {
         TileEntity tileEntity = world.getTileEntity(pos);
         return tileEntity != null && Arrays.stream(classes)
-                .anyMatch(clazz -> clazz.isInstance(tileEntity));
+            .anyMatch(clazz -> clazz.isInstance(tileEntity));
     }
 
     @SuppressWarnings("unchecked")
@@ -279,9 +285,9 @@ public final class GtUtil {
     public static void withModContainerOverride(ModContainer container, Runnable runnable) {
         ModContainer old = Loader.instance().activeModContainer();
         Loader.instance().setActiveModContainer(container);
-        
+
         runnable.run();
-        
+
         Loader.instance().setActiveModContainer(old);
     }
 
@@ -293,15 +299,15 @@ public final class GtUtil {
     public static ResourceLocation getGuiTexture(String name) {
         return new ResourceLocation(Reference.MODID, "textures/gui/" + name + ".png");
     }
-    
+
     public static ResourceLocation getCoverTexture(String name) {
         return new ResourceLocation(Reference.MODID, "blocks/covers/" + name);
     }
-    
+
     public static int moveItemStack(TileEntity from, TileEntity to, EnumFacing fromSide, EnumFacing toSide, int maxTargetSize, int minTargetSize) {
         return moveItemStack(from, to, fromSide, toSide, maxTargetSize, minTargetSize, stack -> true);
     }
-    
+
     public static int moveItemStack(TileEntity from, TileEntity to, EnumFacing fromSide, EnumFacing toSide, int maxTargetSize, int minTargetSize, java.util.function.Predicate<ItemStack> filter) {
         return moveItemStack(from, to, fromSide, toSide, dest -> true, filter, (source, dest, sourceStack, sourceSlot) -> {
             for (int j = 0; j < dest.getSlots(); j++) {
@@ -311,14 +317,14 @@ public final class GtUtil {
             return 0;
         });
     }
-    
+
     public static int moveItemStackIntoSlot(TileEntity from, TileEntity to, EnumFacing fromSide, EnumFacing toSide, int destSlot, int maxTargetSize, int minTargetSize) {
         return moveItemStack(from, to, fromSide, toSide, dest -> dest.getSlots() - 1 >= destSlot, stack -> true, (source, dest, sourceStack, sourceSlot) -> {
             int count = moveSingleItemStack(source, dest, sourceStack, sourceSlot, destSlot, minTargetSize, maxTargetSize);
             return Math.max(count, 0);
         });
     }
-    
+
     private static int moveItemStack(TileEntity from, TileEntity to, EnumFacing fromSide, EnumFacing toSide,
                                      java.util.function.Predicate<IItemHandler> condition, java.util.function.Predicate<ItemStack> filter, QuadFunction<IItemHandler, IItemHandler, ItemStack, Integer, Integer> consumer) {
         if (from != null && to != null) {
@@ -336,17 +342,17 @@ public final class GtUtil {
                 }
             }
         }
-        
+
         return 0;
     }
-    
+
     private static int moveSingleItemStack(IItemHandler source, IItemHandler dest, ItemStack sourceStack, int sourceSlot, int destSlot, int minTargetSize, int maxTargetSize) {
         ItemStack destStack = dest.getStackInSlot(destSlot);
-        
+
         ItemStack sourceStackCopy = sourceStack.copy();
         int free = destStack.getMaxStackSize() - destStack.getCount();
         sourceStackCopy.setCount(Math.min(sourceStackCopy.getCount(), Math.min(maxTargetSize - destStack.getCount(), free)));
-        
+
         int totalSize = sourceStackCopy.getCount() + destStack.getCount();
         if (totalSize >= minTargetSize && (destStack.isEmpty() || ItemHandlerHelper.canItemStacksStack(sourceStackCopy, destStack))) {
             ItemStack inserted = dest.insertItem(destSlot, sourceStackCopy, false);
@@ -354,52 +360,52 @@ public final class GtUtil {
             if (inserted.isEmpty()) source.extractItem(sourceSlot, count, false);
             return count;
         }
-        
+
         return 0;
     }
-    
+
     public static Set<EnumFacing> allSidesExcept(EnumFacing side) {
         Set<EnumFacing> sides = new HashSet<>(Util.allFacings);
         sides.remove(side);
         return sides;
     }
-    
+
     public static Set<EnumFacing> allSidesExcept(Collection<EnumFacing> sides) {
         Set<EnumFacing> facings = new HashSet<>(Util.allFacings);
         facings.removeAll(sides);
         return facings;
     }
-    
+
     public static ItemStack collectItemFromArea(World world, BlockPos begin, BlockPos end) {
         List<EntityItem> list = world.getEntitiesWithinAABB(EntityItem.class, new AxisAlignedBB(begin, end));
         if (list.size() > 0) {
             EntityItem entityItem = list.get(0);
             world.removeEntity(entityItem);
             return entityItem.getItem();
-        } 
+        }
         return ItemStack.EMPTY;
     }
-    
+
     public static ItemStack copyWithoutDamage(ItemStack stack, int count) {
         ItemStack copy = stack.copy();
         copy.setCount(count);
         copy.setItemDamage(0);
         return copy;
     }
-    
+
     public static EnumFacing getNextFacing(EnumFacing facing) {
         int index = (facing.ordinal() + 1) % EnumFacing.VALUES.length;
         return EnumFacing.VALUES[index];
     }
-    
+
     public static boolean canGrowStack(ItemStack existing, ItemStack addition) {
         return addition.getCount() + existing.getCount() <= existing.getMaxStackSize();
     }
-    
+
     public static Pair<ItemStack, FluidStack> fillContainer(ItemStack container, IFluidHandler source, int maxFill) {
         ItemStack containerCopy = ItemHandlerHelper.copyStackWithSize(container, 1); // do not modify the input
         IFluidHandlerItem dest = FluidUtil.getFluidHandler(containerCopy);
-        
+
         if (dest != null) {
             FluidStack transfer = FluidUtil.tryFluidTransfer(dest, source, maxFill, true);
             if (transfer != null) {
@@ -407,12 +413,16 @@ public final class GtUtil {
                 return Pair.of(stack, transfer);
             }
         }
-        
+
         return Pair.of(ItemStack.EMPTY, null);
     }
     
+    public static Predicate<Fluid> fluidPredicate(Fluid... fluids) {
+        return fluid -> ArrayUtils.contains(fluids, fluid);
+    }
+
     private static class VoidTank implements IFluidHandler {
-        
+
         @Override
         public IFluidTankProperties[] getTankProperties() {
             return EmptyFluidHandler.EMPTY_TANK_PROPERTIES_ARRAY;
